# floofbot

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.gradle  settings.gradle
src/: main.rs
src/main/java/nl/thedutchmc/floofbot/: ConfigurationHandler.java  FileHandler.java  FloofBot.java  JdaHandler.java
src/main/java/nl/thedutchmc/floofbot/jdaEvents/: MessageReceivedEventListener.java
