[package]
name = "CatExplorer"
version = "0.1.0"
authors = ["TheDutchMC04 <tobias64a@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"
tokio = { version = "1", features = ["full"] }
glob = "0.3.0"
rand = "0.8.0"